--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,11 +1,22 @@
 <section class="orders-show">
 
   <header class="page-header">
-    <h1>Order #<%= @order.id %></h1>
+    <h1>Order <%= @order.id %></h1>
   </header>
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
+    <div class="order-products d-flex flex-column">
+      <% @order.line_items.each do |line_item| %>
+        <div class="col-6 my-4">
+          <%= image_tag line_item.product.image.thumb.url, alt: line_item.product.name %>
+          <h2 class="text-success my-3"><%= line_item.product.name %></h2>
+          <p><%= line_item.product.description %></p>
+          <p>Quantity: <%= line_item.quantity %></p>
+          <p>Line Item Total: <span class="text-success"><%= number_to_currency(line_item.total_price) %></span></p>
+        </div>
+      <% end %>
+    </div>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
