--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,3 +1,5 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Number of Products: <%= @product_count %></p>
-<p>Number of Categories: <%= @category_count %></p>
+<h1 class="text-success my-4">Admin Dashboard</h1>
+<ul class="mt-5">
+  <li><h3>Number of Products: <span class="text-primary"><%= @product_count %></span></h3></li>
+  <li><h3>Number of Categories: <span class="text-primary"><%= @category_count %></span></h3></li>
+</ul>
