--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Category</h1>
+<h1 class="text-success my-3">New Category</h1>
 
 <%= form_with model: [:admin, @category] do |form| %>
   <% if @category.errors.any? %>
@@ -13,14 +13,14 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
+  <div class="field my-4">
+    <%= form.label :name ,class: 'text-dark mr-4'%>
     <%= form.text_field :name %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+  <%= form.submit 'Create Category', class: 'btn bg-success text-light mb-4' %>
   </div>
 <% end %>
 
-<%= link_to 'Back', admin_categories_path %>
+<%= link_to 'Back', admin_categories_path , class: 'text-danger'%>
