--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,10 @@
 
   <%= render 'layouts/top_nav' %>
 
-  <!-- Here is where we add the login status block -->
   <% if session[:user_id] %>
     <p>Welcome, <%= User.find(session[:user_id]).first_name %>! | <%= link_to 'Logout', logout_path, method: :delete %></p>
   <% else %>
-    <%= link_to 'Sign Up', signup_path %> | <%= link_to 'Login', login_path %>
+    <%= link_to 'Sign Up', signup_path, class: 'my-4 mx-3' %> | <%= link_to 'Login', login_path, class: 'text-success my-4  ml-3' %>
   <% end %>
 
   <main class="container">
