--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,21 @@
-<h1>Sign Up</h1>
+<h1 class="text-success my-5">Sign Up</h1>
 <%= form_with(scope: :user, url: signup_path, local: true) do |form| %>
-  <div>
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
+  <div class="my-3">
+    <%= form.text_field :first_name, placeholder: "First Name" %>
+  </div>
+  <div class="my-3">
+    <%= form.text_field :last_name, placeholder: "Last Name" %>
+  </div>
+  <div class="my-3">
+    <%= form.email_field :email, placeholder: "Email" %>
+  </div>
+  <div class="my-3">
+    <%= form.password_field :password, placeholder: "Password" %>
+  </div>
+  <div class="my-3">
+    <%= form.password_field :password_confirmation, placeholder: "Password Confirmation" %>
   </div>
   <div>
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </div>
-  <div>
-    <%= form.label :email %>
-    <%= form.email_field :email %>
-  </div>
-  <div>
-    <%= form.label :password %>
-    <%= form.password_field :password %>
-  </div>
-  <div>
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation %>
-  </div>
-  <div>
-    <%= form.submit "Sign Up" %>
+    <%= form.submit "Sign Up", class: 'btn bg-success text-light my-4' %>
   </div>
 <% end %>
