--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -14,8 +14,7 @@
   <% end %>
 
   <div class="field my-4">
-    <%= form.label :name ,class: 'text-dark mr-4'%>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, placeholder: "Category Name" %>
   </div>
 
   <div class="actions">
